# internal/infrastructure/data/mysql/image_repo.go
@@ -1,152 +1,0 @@
-package mysql
-
-import (
-	"context"
-	"database/sql"
-	"errors"
-	"time"
-
-	"github.com/velonyapp/asset/internal/domain/entity"
-	"github.com/velonyapp/asset/internal/domain/repo"
-	"github.com/velonyapp/asset/internal/domain/vo"
-)
-
-type ImageRepo struct {
-	db *sql.DB
-}
-
-func NewImageRepo(db *sql.DB) repo.Image {
-	return &ImageRepo{db: db}
-}
-
-type imageScanner interface {
-	Scan(dest ...any) error
-}
-
-func (repo *ImageRepo) FindByID(ctx context.Context, imageID vo.ImageID) (*entity.Image, error) {
-	const query = `
-		SELECT
-			id,
-			key,
-			status,
-			create_time
-		FROM images
-		WHERE id = ?
-		LIMIT 1
-	`
-
-	row := executor(ctx, repo.db).QueryRowContext(ctx, query, imageID.Value())
-
-	image, err := scanImage(row)
-	if err != nil {
-		if errors.Is(err, sql.ErrNoRows) {
-			return nil, nil
-		}
-
-		return nil, err
-	}
-
-	return image, nil
-}
-
-func (repo *ImageRepo) FindByStorageKey(ctx context.Context, storageKey vo.StorageKey) (*entity.Image, error) {
-	const query = `
-		SELECT
-			id,
-			key,
-			status,
-			create_time
-		FROM images
-		WHERE key = ?
-		LIMIT 1
-	`
-
-	row := executor(ctx, repo.db).QueryRowContext(ctx, query, storageKey.Value())
-
-	image, err := scanImage(row)
-	if err != nil {
-		if errors.Is(err, sql.ErrNoRows) {
-			return nil, nil
-		}
-
-		return nil, err
-	}
-
-	return image, nil
-}
-
-func (repo *ImageRepo) Save(ctx context.Context, image *entity.Image) error {
-	if image.DeleteTime != nil {
-		const query = `
-			DELETE FROM images
-			WHERE id = ?
-		`
-
-		_, err := executor(ctx, repo.db).ExecContext(ctx, query, image.ID.Value())
-		return err
-	}
-
-	const query = `
-		INSERT INTO images (
-			id,
-			key,
-			status,
-			create_time
-		)
-		VALUES (?, ?, ?, ?)
-		ON DUPLICATE KEY UPDATE
-			key = ?,
-			status = ?,
-			create_time = ?
-	`
-
-	if _, err := executor(ctx, repo.db).ExecContext(ctx, query,
-		image.ID.Value(),
-		image.StorageKey.Value(),
-		image.Status.String(),
-		image.CreateTime.Value(),
-
-		image.StorageKey.Value(),
-		image.Status.String(),
-		image.CreateTime.Value(),
-	); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func scanImage(scanner imageScanner) (*entity.Image, error) {
-	var (
-		id         string
-		storageKey string
-		status     string
-		createTime time.Time
-	)
-
-	if err := scanner.Scan(
-		&id,
-		&storageKey,
-		&status,
-		&createTime,
-	); err != nil {
-		return nil, err
-	}
-
-	storageKeyVO, err := vo.NewStorageKey(storageKey)
-	if err != nil {
-		return nil, err
-	}
-
-	statusVO, err := vo.NewImageStatus(status)
-	if err != nil {
-		return nil, err
-	}
-
-	return &entity.Image{
-		ID:         vo.NewImageID(id),
-		StorageKey: storageKeyVO,
-		Status:     statusVO,
-		CreateTime: vo.NewTime(createTime),
-	}, nil
-}
